Scrollbar and contact form reset fix

--- a/style.css
+++ b/style.css
@@ -44,7 +44,28 @@ body{
   font-weight: 600;
   font-style: normal;
 }
-
+/*Scrollbar Style*/
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.6);
+	background-color: #CCCCCC;
+}
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb
+{
+	background-color: #FFF;
+  border-radius: 10px;
+	background-image: -webkit-linear-gradient(90deg,
+	                      rgba(0, 0, 0, 1) 0%,
+											  rgba(0, 0, 0, 1) 25%,
+											  transparent 100%,
+											  rgba(0, 0, 0, 1) 75%,
+											  transparent)
+}
 /* Home carousel/slider  */
 #homeSlider .homeimg {
   max-height: 170vh;
